# bin2hpp

./: CMakeLists.txt  README.md  bin2hpp.cpp  bin2hpp.hpp  main.cpp  params.hpp
cmake/: Findcatch.cmake
compile_run_test/: CMakeLists.txt
compile_run_test/C/: CMakeLists.txt  main.c
compile_run_test/CPP/: CMakeLists.txt  main.cpp
compile_run_test/c/: CMakeLists.txt  main.c
compile_run_test/cpp/: CMakeLists.txt  main.cpp
compile_run_test/java/: CMakeLists.txt  Main.java
test/: testdata.cpp  testfiles.cpp  testhelp.cpp  testparams.cpp
